tests/compile_fail/declare_scheduler_visibility_after_name.stderr
error: expected `,`
 --> tests/compile_fail/declare_scheduler_visibility_after_name.rs:8:29
  |
8 | declare_scheduler!(MY_SCHED pub, {
  |                             ^^^
